--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Shin McCold</h1>
-						<p>Hackers are not created<br />
+						<p>Hackers are not Created<br />
 							They are Born
 						</p>
 					</header>
