--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
 								<ul class="features">
 									<li>
 										<span class="icon major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Edit or Code</h3>
+										<p>Code with all the skills you got</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Copy</h3>
+										<p>Cody or Paste it ,it doesn't matter now,cuz matter are matter waves now which travell speed greater than light</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-diamond"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Diamond</h3>
+										<p>Diamondize your skills,practice makes a man perfect</p>
 									</li>
 								</ul>
 								<footer class="major">
@@ -85,30 +85,30 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Code</h2>
+									<p>Total Coding learners are increasing so concentrate oh yea!!<br />
+									records are meant to be broken,Break it with Diamonds(since hardest element on earth)</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon fa-code-fork"></span>
-										<strong>5,120</strong> Etiam
+										<strong>5,120</strong> Branch
 									</li>
 									<li class="style2">
 										<span class="icon fa-folder-open-o"></span>
-										<strong>8,192</strong> Magna
+										<strong>8,192</strong> Commits
 									</li>
 									<li class="style3">
 										<span class="icon fa-signal"></span>
-										<strong>2,048</strong> Tempus
+										<strong>2,048</strong> Repos
 									</li>
 									<li class="style4">
 										<span class="icon fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+										<strong>4,096</strong> Networks
 									</li>
 									<li class="style5">
 										<span class="icon fa-diamond"></span>
-										<strong>1,024</strong> Nullam
+										<strong>1,024</strong> Diamonds
 									</li>
 								</ul>
 								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
