--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Congrats</h2>
+									<p>Thanks to Github,me,God,friends hmmm not many more people are there<br />
+									But yea thanks to them.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions">
@@ -139,8 +139,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>Notice</h2>
+							<p>This is not a Page or website its a Github Pages thanks to them,and many more Keep Enjoying keep Hacking! Remember Hackers never Die,Hackers are everywhere! </p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
