--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Shin McCold</title>
+		<title>Abhijeet Mohanta</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,7 +18,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Shin McCold</h1>
+						<h1>Abhijeet Mohanta</h1>
 						<p>Hackers are not Created<br />
 							They are Born
 						</p>
@@ -163,7 +163,7 @@
 								<li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; Shin.io Design: <a href="https://hackerworld.net">By Shin</a>.</p>
+						<p class="copyright">&copy; Shin.io Design: <a href="https://hackerworld.net">By Abhijeet</a>.</p>
 					</footer>
 
 			</div>
